<resources>
    <string name="app_name">ZhiHu</string>
    <string name="info">资讯</string>
    <string name="login">GeekNews</string>
    <string name="login1">A pure reading App for you</string>
    <string name="zhihu">知乎日报</string>
    <string name="wechat">微信精选</string>
    <string name="gank">干活集中营</string>
    <string name="gold">稀土掘金</string>
    <string name="vtex">V2EX</string>
    <string name="choose">选项</string>
    <string name="collect">收藏</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
